--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,13 @@
           
           <% if current_candidate %>
             Candidate: Signed in as <strong><%= current_candidate.name %></strong>
-            <%= link_to "Sign out", signout_path, id: "sign_out" %>
+            | <%= link_to "Sign out", signout_path, id: "sign_out" %>
             <br>
             <% if current_candidate.profile %>
               <%= link_to 'Edit your TapCV', edit_profile_path(current_candidate.profile) %> | 
               <%= link_to 'View', current_candidate.profile %>
               <%else%>
-              <%= link_to 'Create your TapCV (your 100% anonymous profile)', new_profile_path %>
+              <%= link_to 'Create your 100% anonymous TapCV', new_profile_path %>
             <%end%>
           <% elsif current_user %>
              Recruiter: Logged in as <strong><%= current_user.email %></strong>.
