--- a/app/views/invitations/_invitation.html.erb
+++ b/app/views/invitations/_invitation.html.erb
@@ -1,4 +1,4 @@
-<tr onclick="location.href='<%=invitation_path(invitation)%>';" style="cursor:pointer">
+<tr onclick="location.href='<%=invitation_path(invitation)%>';" style="cursor:pointer" title="Click to view full details">
       		
 
 <td><%= link_to invitation.user.company_name, invitation %></td>
@@ -7,7 +7,7 @@
 	<% if invitation.approval %>
 		<b>you accepted</b>
 	<% else %>
-		<%= button_to "Accept", :controller => "invitations", :action => "accept", :id => invitation.id %>
+		<%= button_to "Accept", {:controller => "invitations", :action => "accept", :id => invitation.id}, {:class => "btn btn-medium btn-primary"} %>
 	<% end %>
 </td>
 
