--- a/app/views/profiles/confirm.html.erb
+++ b/app/views/profiles/confirm.html.erb
@@ -1,10 +1,10 @@
 <h4>Please confirm your request!</h4>
 	
 <% if current_user.customer_id %>
-If the candidate approves, your credit card ( <%= @cu.active_card.type%>, ending in <%= @cu.active_card.last4 %> | <%= link_to "use different card", edit_user_path(current_user)%> )<br>
-will be charged <b>$4.95 USD</b> and you will receive the candidate's <br>full name, facebook id, and email address.
+If this candidate approves, your credit card ( <%= @cu.active_card.type%>, ending in <%= @cu.active_card.last4 %> | <%= link_to "use different card", edit_user_path(current_user)%> )<br>
+will be charged <b>$4.95 USD</b> and you will receive this candidate's <br>full name, facebook id, and email address.
 <br><br>
-<%= button_to "Confirm request", :action => "invite" %>
+<%= button_to "Confirm request", {:action => "invite"}, {:class => "btn btn-large btn-primary"} %>
 
 <%else%>
 If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you will receive the candidate's full name, facebook id, and email address.
@@ -42,6 +42,6 @@ If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you wil
 <%end%>
 <%end%>
 
-We offer a <b>full refund</b> if any of the information in the candidate's profile<br> turns out to be false.</b>
+You will receive a <b>full refund</b> from us if any of the information in the candidate's profile<br> turns out to be false - even at a much later point in time.</b>
 <br><br>
 <%= render "full_profile" %>
