--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,5 @@
-<h3>New 100% anonymous profile</h3>
+<h3>Create your 100% anonymous TapCV</h3>
+<h4>You are in control over who sees your contact details:<br> Only people whose request you explicitly approve will see your identity.</h4>
 
 <%= render 'form' %>
 
