--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>&nbsp;&nbsp;&nbsp;&nbsp;
+    <%= f.button :submit, "Search",:class => "btn btn-medium btn-primary" %>&nbsp;&nbsp;&nbsp;&nbsp;
     <%= link_to "reset", :id => @query.id, :action => "reset", :controller =>"queries"  %>
   </div>
 <% end %>
