--- a/app/views/users/_payment_form.html.erb
+++ b/app/views/users/_payment_form.html.erb
@@ -9,10 +9,10 @@
     No valid credit card.
     <%end%>
 
-    <button id="customButton">Change payment method</button><br>
+    <button id="customButton" class = "btn btn-small btn-default">Change payment method</button><br>
 
   <% else %>
-    <button id="customButton">Enter payment method</button>
+    <button id="customButton" class = "btn btn-small btn-primary">Enter payment method</button>
   <% end %>
 
   <script>
