--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -57,9 +57,11 @@
       Create your anonymous TapCV in 30 seconds<br> and get contacted by recruiters!
     </h2>
     <br>
-    <%= link_to "Login anonymously via Facebook!", "/auth/facebook", id: "sign_in", 
+    <%= link_to "Login anonymously via Facebook*!", "/auth/facebook", id: "sign_in", 
                                 class: "btn btn-large btn-primary" %>
 
+<br>
+  *None of your actions here will ever be visible on Facebook
   </div>
   <%end%>
 	<%= render "profiles/filter_table"%>	
