--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,12 +20,13 @@
 		<div class="center hero-unit">
 		
      <h1>
-      Create your anonymous TapCV</h1> <h2> You are in control over who sees your contact details:<br> Only people whose request you explicitly approve will see your identity. </h2>
+      Your TapCV</h1>
+      <h2>Create your anonymous TapCV now! Your identity remains completely hidden.
+      </h2>
     
     <br>
     <%= link_to 'Create my TapCV', new_profile_path, 
                                 class: "btn btn-large btn-primary" %>
-
   </div>
 
 		<%end%>
