--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -4,7 +4,7 @@
   	<div class="form-inputs">
   		<div class ="module"></div>
 		<b>You job status</b><br><br>
-			<%= f.input :silicon_valley, label: "Targeted job", inline_label: 'I am interested in full-time positions as an iOS developer in Silicon Valley.' %>
+			<%= f.input :silicon_valley, label: "Targeted job", inline_label: 'I am interested in full-time positions as an iOS developer in Silicon Valley and open for interviews for jobs that meet my salary requirements.' %>
 			<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
 			<%= f.input :general_min_yearly_salary, label: 'Min annual salary (in thousands of USD)', placeholder: 'e.g. "65"', hint: 'Your minimum desired annual salary (in thousands of USD)' %>
 		  	<%= f.input :notice_period, label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start (in weeks)?'%>
@@ -13,16 +13,16 @@
 		<b> Your iOS apps </b>
 		<br><br> 
 		<%= f.input :ios_apps, label: 'Apps in the app-store', hint: 'Number of iOS apps that you built yourself, not in a team.' %>
-		<%= f.input :ios_years, label: 'Experience', placeholder: 'e.g. "2.5"', hint: 'Number of years programming iOS apps' %>
+		<%= f.input :ios_years, label: 'Experience (in years)', placeholder: 'e.g. "2.5"', hint: 'Number of years programming iOS apps' %>
 		<div class ="module"></div>
-		<b>Work experience</b><br><br>
+		<b>Work experience (start with your last/current job)</b><br><br>
 
 		<%= f.fields_for :jobs do |job_form| %>
 		
 		  	<%= job_form.input :company_name, label: 'Company name (optional)' %>
 		  	<%= job_form.input :company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
 		  	<%= job_form.association :position, label: 'Position', prompt: "Select position" %>
-		  	<%= job_form.input :team_size, label: 'Number of people you led (if you were Team Lead or CTO)', placeholder: 'e.g. "5"' %>
+		  	<%= job_form.input :team_size, label: 'Number of people led by you', placeholder: 'e.g. "5"' %>
 		  	<%= job_form.association :platforms, as: :check_boxes, label: 'Mobile platform' %>
 		  	<%= job_form.association :skills, as: :check_boxes, label: 'Skills applied by you' %>
 		  	<%= job_form.input :start_date, label: 'Start date' %>
@@ -31,27 +31,27 @@
 		  	<%= job_form.input :contract, collection: [["Full-time",1], ["Part-time",2]], prompt: "Select contract", label: 'Full-time or part-time?' %>
 		  	<%= job_form.input :annual_salary, label: 'Annual salary if full-time', placeholder: 'e.g. "65"', hint: 'Annual salary (in thousands of USD)' %>
 		  	<%= job_form.input :hourly_salary, label: 'Hourly salary if part-time', placeholder: 'e.g. "50"', hint: 'Hourly salary (USD)' %>
-		  	<%= job_form.link_to_remove "[-] Remove the above work experience" %>
+		  	<h4><%= job_form.link_to_remove "[-] Remove the above work experience" %></h4>
 		  	<br><br>
 		<div class ="slim_module"></div>
 
 		<% end %>
 
-		<p><%= f.link_to_add "[+] Add a work experience", :jobs %></p>
+		<h4><%= f.link_to_add "[+] Add a work experience", :jobs %></h4>
 
 		<div class ="module"></div>
 		<b>Education</b><br><br>
 		<%= f.simple_fields_for :degrees do |degree_form| %>
 		  	<%= degree_form.input :level, collection: [["Highschool",1], ["College/Undergraduate",2], ["Master/Graduate",3], ["Postgraduate/PhD",4]], prompt: "Select degree", label: 'Degree' %>
-		<%= degree_form.input :school_name, label: "School/college/university", placeholder: 'e.g. "University of California, Berkeley"'  %>
+		<%= degree_form.input :school_name, label: "School/university", placeholder: 'e.g. "University of California, Berkeley"'  %>
 		<%= degree_form.association :subject, collection: Subject.order('name'), prompt: "Select subject", label: "Your major/main subject" %>
 		<%= degree_form.input :gpa, label: "Your GPA", placeholder: 'e.g. "3,65"' %>
 
-		  	<%= degree_form.link_to_remove "[-] Remove the above degree" %>
+		  	<h4><%= degree_form.link_to_remove "[-] Remove the above degree" %></h4>
 		  	  	<br><br>
 		<div class ="slim_module"></div>
 		<% end %>
-		<p><%= f.link_to_add "[+] Add a degree", :degrees %></p>
+		<h4><%= f.link_to_add "[+] Add a degree", :degrees %></h4>
 <div class ="module"></div>
 <b> Standardized test scores </b>
 <br><br>
@@ -59,11 +59,11 @@
 		  	<%= test_score_form.input :test_type, collection: [["SAT math",1], ["SAT critical reading",2], ["SAT writing",3], ["ACT English",4], ["ACT math",5], ["ACT reading",6], ["ACT science",7]], prompt: "Select test type", label: 'Test type' %>
 		<%= test_score_form.input :score, label: "Score", placeholder: 'e.g. "501"'  %>
 		
-		  	<%= test_score_form.link_to_remove "[-] Remove the above test score" %>
+		  	<h4><%= test_score_form.link_to_remove "[-] Remove the above test score" %></h4>
 		  	  	<br><br>
 		<div class ="slim_module"></div>
 		<% end %>
-		<p><%= f.link_to_add "[+] Add a test score", :test_scores %></p>
+		<h4><%= f.link_to_add "[+] Add a test score", :test_scores %></h4>
 <div class ="module"></div>
 	
 <b>	Confirm accuracy </b>
