--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -2,7 +2,7 @@
     <thead>
     <tr>
 
-      <th>Highest achieved position</th>
+      <th>Highest position</th>
       <th>Platform</th>
       <th>Experience in years</th>
       <th>Highest degree</th>
