minor text improvements

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
               <%= link_to 'Edit your TapCV', edit_profile_path(current_candidate.profile) %> | 
               <%= link_to 'View', current_candidate.profile %>
               <%else%>
-              <%= link_to 'Create your 100% anonymous TapCV', new_profile_path %>
+              <%= link_to 'Create your TapCV', new_profile_path %>
             <%end%>
           <% elsif current_user %>
              Recruiter: Logged in as <strong><%= current_user.email %></strong>.
