--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,10 +19,10 @@
 		<%else%>
 		<div class="center hero-unit">
 		
-     <h1>
-      Your TapCV</h1>
-      <h2>Create your anonymous TapCV now! Your identity remains completely hidden.
-      </h2>
+     <h2>
+      Create your 100% anonymous TapCV now!</h2>
+      <h3>Your identity remains completely hidden.
+      </h3>
     
     <br>
     <%= link_to 'Create my TapCV', new_profile_path, 
