--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -9,6 +9,7 @@
 
     <%= f.input :max_salary, placeholder: 'e.g. "100000"', label: 'Maximum expected salary (USD)' %>
     <%= f.input :max_notice_period, placeholder: 'e.g. "6"', label: 'Maximum notice period (in weeks)' %>
+    <%= f.input :work_permit_required, label: 'Current work permit required',:wrapper => :inline_checkbox %>
 
   </div>
 
