--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,4 @@
-<h3>Create your 100% anonymous TapCV</h3>
+<h3>Post your CV anonymously.</h3>
 <h4>Your identity remains completely hidden.</h4>
 
 <%= render 'form' %>
