--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,12 +20,12 @@
 		<div class="center hero-unit">
 		
      <h2>
-      Create your anonymous TapCV now!</h2>
+      Post your CV anonymously now!</h2>
       <h3>Your identity remains completely hidden.
       </h3>
     
     <br>
-    <%= link_to 'Create my TapCV', new_profile_path, 
+    <%= link_to 'Post my CV', new_profile_path, 
                                 class: "btn btn-large btn-primary" %>
   </div>
 
@@ -48,24 +48,44 @@
 		<%= render "profiles/invitations_table" %>
 	<% end %>
 	<br>
+	<%= render "profiles/filter_table"%>
 <% end %>
 
-<% unless current_candidate %>
-	<% unless current_user %>
+<% unless current_candidate || current_user %>
+<div class="row">
+<div class ="span6">
 	<div class="center hero-unit">
-		<h1>Jobseekers</h1>
-     <h2>
-      Post your CV anonymously and get recruited.
-    </h2>
-    <br>
-    <%= link_to "Login  via Facebook* (but stay anonymous)", "/auth/facebook", id: "sign_in", 
-                                class: "btn btn-large btn-primary" %>
+				<h1>Jobseekers</h1>
+			     <h2>
+			      Post your CV anonymously and get recruited.
+			    </h2>
+				    <br>
+				    <%= link_to "Login  via Facebook (but stay anonymous)", "/auth/facebook", id: "sign_in", 
+				                                class: "btn btn-large btn-primary" %>
 
-<br>
-   *Facebook login is needed to ensure that you are a real person.
-  </div>
-  <%end%>
-	<%= render "profiles/filter_table"%>	
+					<br>
+					
+  	</div>
+</div>
+<div class ="span6">
+  	<div class="center hero-unit">
+				<h1>Companies</h1>
+			     <h2>
+			      Find highly qualified iOS hackers that you wouldn't find anyhwere else!
+			    </h2>
+				    <br>
+				    <%= link_to "Signup", signup_path, id: "sign_in", 
+                                class: "btn btn-large btn-info" %>
+
+<%= link_to "Login", login_path, id: "sign_in", 
+                                class: "btn btn-large btn-info" %>
+
+					
+  	</div>
+</div>
+</div>
+
+	
 <% end %>
 
 
