--- a/app/views/candidate_mailer/signup.html.erb
+++ b/app/views/candidate_mailer/signup.html.erb
@@ -3,7 +3,7 @@ Welcome to TapCV
 TapCV gets you more interview requests by interesting companies! 
 <br><br>
 <% unless @candidate.profile %>
-<b><%= link_to "Get started now by creating your 100% anonymous TapCV", new_profile_url %></b>
+<b><%= link_to "Get started now by posting your anonymous CV!", new_profile_url %></b>
 <br><br>
 
 <%end%>
