--- a/app/views/profiles/_accepted_invitation.html.erb
+++ b/app/views/profiles/_accepted_invitation.html.erb
@@ -11,7 +11,7 @@
 		<%= accepted_invitation.candidate.profile.platforms.map(&:name).join(", ") %>
 	</td>
 	<td>
-		<%= accepted_invitation.candidate.profile.ios_years %>
+		<%= accepted_invitation.candidate.profile.ios_years %> years
 	</td>		
 	<td>
 		<%= display_education_level(accepted_invitation.candidate.profile.education_level) %>
