--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -3,8 +3,8 @@
 
   	<div class="form-inputs">
   		<div class ="module"></div>
-		<b>You job status</b><br><br>
-			<%= f.input :silicon_valley, label: "Targeted job", inline_label: 'I am interested in full-time positions as an iOS developer in Silicon Valley and open for interviews for jobs that meet my salary requirements.' %>
+		<b>Your job status</b><br><br>
+			<%= f.input :silicon_valley, label: "Location", inline_label: 'I am willing to work in the Bay Area (Silion Valley).' %>
 			<%= f.input :work_permit, label: 'Permit', inline_label: 'I am currently permitted to work in the US.' %>
 			<%= f.input :general_min_yearly_salary, label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
 		  	<%= f.input :notice_period, label: 'Notice period', placeholder: 'e.g. "3"', hint: 'How quickly could you start (in weeks)?'%>
