--- a/app/views/profiles/_invitations_table.html.erb
+++ b/app/views/profiles/_invitations_table.html.erb
@@ -4,7 +4,7 @@
 
       <th>Highest position</th>
       <th>Platform</th>
-      <th>Experience in years</th>
+      <th>iOS experience</th>
       <th>Highest degree</th>
       
     </tr>
