--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -4,8 +4,9 @@
 
       <th>Highest position</th>
       <th>Platform</th>
-      <th>Experience in years</th>
+      <th>iOS experience</th>
       <th>Highest degree</th>
+      <th>Bay Area</th>
       <th>Last update</th>
       <th>Your status</th>
       
