--- a/app/views/profiles/_invitation.html.erb
+++ b/app/views/profiles/_invitation.html.erb
@@ -10,7 +10,7 @@
 		<%= invitation.candidate.profile.platforms.map(&:name).join(", ") %>
 	</td>
 	<td>
-		<%= invitation.candidate.profile.ios_years %>
+		<%= invitation.candidate.profile.ios_years %> years
 	</td>		
 	<td>
 		<%= display_education_level(invitation.candidate.profile.education_level) %>
