--- a/app/views/profiles/_profile.html.erb
+++ b/app/views/profiles/_profile.html.erb
@@ -8,10 +8,13 @@
 		<%= profile.platforms.map(&:name).join(", ") %>
 	</td>
 	<td>
-		<%= profile.ios_years %>
+		<%= profile.ios_years %> years
 	</td>		
 	<td>
 		<%= display_education_level(profile.education_level) %>
+	</td>
+	<td>
+		<%= "yes" if profile.silicon_valley == true %>
 	</td>	
 
 
