--- a/app/views/profiles/confirm.html.erb
+++ b/app/views/profiles/confirm.html.erb
@@ -2,12 +2,12 @@
 	
 <% if current_user.customer_id %>
 If this candidate approves, your credit card ( <%= @cu.active_card.type%>, ending in <%= @cu.active_card.last4 %> | <%= link_to "use different card", edit_user_path(current_user)%> )<br>
-will be charged <b>$4.95 USD</b> and you will receive this candidate's <br>full name, facebook id, and email address.
+will be charged <b>$4.95 USD</b> and you will receive this candidate's <br><b>full name</b> and <b>email address</b>.
 <br><br>
 <%= button_to "Confirm request", {:action => "invite"}, {:class => "btn btn-large btn-primary"} %>
 
 <%else%>
-If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you will receive the candidate's full name, facebook id, and email address.
+If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you will receive the candidate's <b>full name</b> and <b>email address</b>.
 <br><br>
 <%= simple_form_for(current_user) do |f| %>
 
@@ -16,7 +16,7 @@ If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you wil
   <script src="https://checkout.stripe.com/v2/checkout.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 
-  <button id="customButton">Confirm request</button>
+  <button id="customButton" class="btn btn-large btn-primary">Confirm request</button>
 
   <script>
     $('#customButton').click(function(){
@@ -42,6 +42,6 @@ If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you wil
 <%end%>
 <%end%>
 
-You will receive a <b>full refund</b> from us if any of the information in the candidate's profile<br> turns out to be false - even at a much later point in time.</b>
+You will receive a <b>full refund</b> from us if any of the information in the candidate's profile<br> turns out to be false.</b>
 <br><br>
 <%= render "full_profile" %>
