include number of apps in listing, made all the listing types look the same

--- a/app/views/profiles/_accepted_invitation.html.erb
+++ b/app/views/profiles/_accepted_invitation.html.erb
@@ -5,16 +5,20 @@
 	<td>
 		<%= accepted_invitation.candidate.profile.highest_position.name if accepted_invitation.candidate.profile.jobs.first %>
 	</td>
-
 	<td>
-	
 		<%= accepted_invitation.candidate.profile.platforms.map(&:name).join(", ") %>
 	</td>
 	<td>
 		<%= accepted_invitation.candidate.profile.ios_years %> years
-	</td>		
+	</td>
+	<td>
+		<%= accepted_invitation.candidate.profile.ios_apps %> apps
+	</td>					
 	<td>
 		<%= display_education_level(accepted_invitation.candidate.profile.education_level) %>
+	</td>
+	<td>
+		<%= "yes" if accepted_invitation.candidate.profile.silicon_valley == true %>
 	</td>		
 
   </tr>
