--- a/app/views/profiles/_invitations_table.html.erb
+++ b/app/views/profiles/_invitations_table.html.erb
@@ -5,7 +5,9 @@
       <th>Highest position</th>
       <th>Platform</th>
       <th>iOS experience</th>
+      <th>iOS apps</th>
       <th>Highest degree</th>
+      <th>Bay Area</th>
       
     </tr>
   </thead>
