--- a/app/views/profiles/_invitation.html.erb
+++ b/app/views/profiles/_invitation.html.erb
@@ -11,8 +11,14 @@
 	</td>
 	<td>
 		<%= invitation.candidate.profile.ios_years %> years
-	</td>		
+	</td>	
+	<td>
+		<%= invitation.candidate.profile.ios_apps %> apps
+	</td>			
 	<td>
 		<%= display_education_level(invitation.candidate.profile.education_level) %>
-	</td>	
+	</td>
+	<td>
+		<%= "yes" if invitation.candidate.profile.silicon_valley == true %>
+	</td>		
   </tr>
