--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -5,9 +5,9 @@
       <th>Highest position</th>
       <th>Platform</th>
       <th>iOS experience</th>
+      <th>iOS apps</th>
       <th>Highest degree</th>
       <th>Bay Area</th>
-      <th>Last update</th>
       <th>Your status</th>
       
     </tr>
