fixed login after email error

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -57,7 +57,7 @@
 	<div class="center hero-unit">
 				<h1>Jobseekers</h1>
 			     <h2>
-			      Post your CV anonymously and get recruited.
+			      Anonymously post your CV. Sit back. Get recruited.
 			    </h2>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
                                 class: "btn btn-large btn-info" %>
@@ -76,7 +76,7 @@
   	<div class="center hero-unit">
 				<h1>Companies</h1>
 			     <h2>
-			      Find qualified iOS hackers you wouldn't find anyhwere else!
+			      Find more hackers than you can anywhere else.
 			    </h2>
 				    <br>
 				    <%= link_to "Signup", signup_path, id: "sign_in", 
