changed wording to hackers

--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, :class => "btn btn-medium btn-primary" %>
+    <%= f.button :submit, "Sign Up", :class => "btn btn-medium btn-primary" %>
   </div>
 
 <% end %>
