--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,9 +55,9 @@
 <div class="row">
 <div class ="span6">
 	<div class="center hero-unit">
-				<h1>Jobseekers</h1>
+				<h1>Hackers</h1>
 			     <h2>
-			      Anonymously post your CV. Sit back. Get recruited.
+			      Post your CV anonymously. Sit back. Get recruited.
 			    </h2>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
                                 class: "btn btn-large btn-info" %>
@@ -76,7 +76,7 @@
   	<div class="center hero-unit">
 				<h1>Companies</h1>
 			     <h2>
-			      Find more hackers than you can anywhere else.
+			      Find more iOS hackers than anywhere else.
 			    </h2>
 				    <br>
 				    <%= link_to "Signup", signup_path, id: "sign_in", 
