--- a/app/views/user_mailer/approval.html.erb
+++ b/app/views/user_mailer/approval.html.erb
@@ -1,4 +1,4 @@
-Congratulations! This candidate gave you access to her/his contact details:
+Congratulations! This hacker gave you access to her/his contact details:
 
 <br><br>
 Name: <b> <%= @candidate.name %></b>
