--- a/app/views/user_mailer/signup.html.erb
+++ b/app/views/user_mailer/signup.html.erb
@@ -3,7 +3,7 @@ Welcome to TapCV
 Use TapCV to find highly qualified iOS hackers that you wouldn't find anyhwere else!
 <br><br>
 
-<b><%= link_to "Start browsing candidates now", root_url %></b>
+<b><%= link_to "Start browsing hackers now", root_url %></b>
 <br><br>
 Yours,
 <br><br>
