--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
               <%= link_to "Log Out", logout_path %> | 
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
-          Candidates: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
+          Hackers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
           Companies:
               <%= link_to "Sign Up", signup_path %> or
               <%= link_to "Log In", login_path %>
