--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, :class => "btn btn-medium btn-primary" %>
+    <%= f.button :submit, "Sign Up", :class => "btn btn-medium btn-primary" %>
   </div>
 
 <% end %>
