changed button for companies on homepage

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -79,11 +79,10 @@
 			      Find more iOS hackers than anywhere else.
 			    </h2>
 				    <br>
-				    <%= link_to "Signup", signup_path, id: "sign_in", 
-                                class: "btn btn-large btn-info" %>
+				    
+<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+                                class: "btn btn-large btn-primary" %>
 
-<%= link_to "Login", login_path, id: "sign_in", 
-                                class: "btn btn-large btn-info" %>
 
 					
   	</div>
