--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="row">
   			<div class="span2">
-          <h2><%= link_to "TapCV", root_path %></h2>
+          <h2><%= link_to "TapCV", root_path %></h2>staging
           <br>
         </div>
         <div class="span6">  
