--- a/app/views/profiles/confirm.html.erb
+++ b/app/views/profiles/confirm.html.erb
@@ -44,4 +44,4 @@ If the candidate approves, you will be charged <b>$4.95 USD</b> <br> and you wil
 
 You will receive a <b>full refund</b> from us if any of the information in the candidate's profile<br> turns out to be false.</b>
 <br><br>
-<%= render "full_profile" %>
+<%= render "biomed_full_profile" %>
