--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,7 +55,7 @@
 <div class="row">
 <div class ="span6">
 	<div class="center hero-unit">
-				<h1>Hackers</h1>
+				<h1>Engineers</h1>
 			     <h2>
 			      Post your CV anonymously. Sit back. Get recruited.
 			    </h2>
@@ -76,11 +76,11 @@
   	<div class="center hero-unit">
 				<h1>Companies</h1>
 			     <h2>
-			      Find more iOS hackers than anywhere else.
+			      Find more biomedical engineers than anywhere else.
 			    </h2>
 				    <br>
 				    
-<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+<%= link_to "Find biomedical engineers", profiles_path, id: "sign_in", 
                                 class: "btn btn-large btn-primary" %>
 
 
