--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="row">
   			<div class="span2">
-          <h2><%= link_to "TapCV", root_path %></h2>staging
+          <h2><%= link_to "TapCV", root_path %></h2>
           <br>
         </div>
         <div class="span6">  
@@ -39,7 +39,7 @@
               <%= link_to "Log Out", logout_path %> | 
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
-          Hackers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
+          Engineers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
           Companies:
               <%= link_to "Sign Up", signup_path %> or
               <%= link_to "Log In", login_path %>
