--- a/app/views/profiles/_filter_table.html.erb
+++ b/app/views/profiles/_filter_table.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
 <div class ="span8">
-	<h3>iOS hackers open for new full-time challenges</h3>
+	<h3>Biomedical engineers open for new challenges</h3>
 	<br>
-  <%= render 'profiles/table' %>
+  <%= render 'profiles/biomed_table' %>
 </div> 
 <div class ="span3">
 <br>
