--- a/app/views/profiles/_invitations_table.html.erb
+++ b/app/views/profiles/_invitations_table.html.erb
@@ -1,14 +1,11 @@
 <table class="table table-striped table-hover">
     <thead>
     <tr>
-
+      <th>Last title</th>
       <th>Highest position</th>
-      <th>Platform</th>
-      <th>iOS experience</th>
-      <th>iOS apps</th>
+      <th>Experience</th>
       <th>Highest degree</th>
-      <th>Bay Area</th>
-      
+      <th>Geographical restrictions</th>  
     </tr>
   </thead>
     <tbody>
