--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -18,7 +18,7 @@
 	<% end %>
 <% end %>
 
-<%= render "full_profile" %>
+<%= render "biomed_full_profile" %>
 <% unless current_candidate %>
 <% unless ( current_user && find_invitation(@profile)) %>
 <br>
