changed slogan and labels

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,7 +55,7 @@
 <div class="row">
 <div class ="span6">
 	<div class="center hero-unit">
-				<h1>Engineers</h1>
+				<h1>Biomed Engineers</h1>
 			     <h2>
 			      Post your CV anonymously. Sit back. Get recruited.
 			    </h2>
