--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
           <h2><%= link_to "TapCV", root_path %></h2>
           <br>
         </div>
-        <div class="span6">  
+        <div class="span8">  
           <br>
           
           <% if current_candidate %>
@@ -39,7 +39,7 @@
               <%= link_to "Log Out", logout_path %> | 
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
-          Engineers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
+          Biomed Engineers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
           Companies:
               <%= link_to "Sign Up", signup_path %> or
               <%= link_to "Log In", login_path %>
